# cturtle

./: README.md
mie443_contest1/: CMakeLists.txt  package.xml
mie443_contest1/launch/: gmapping.launch  turtlebot.launch  turtlebot_sim.launch  turtlebot_world.launch
mie443_contest1/script/: dumb_alg.py
mie443_contest1/src/: contest1.cpp
mie443_contest1/worlds/: contest1.world  world_1.world
mie443_contest2/: CMakeLists.txt  package.xml
mie443_contest2/boxes_database/: coords.xml  gazebo_coords.xml  templates.xml
mie443_contest2/include/: boxes.h  imagePipeline.h  navigation.h  nn.h  robot_pose.h
mie443_contest2/launch/: contest2.launch  turtlebot_world.launch  webcam.launch
mie443_contest2/maps/: map_1.pgm  map_1.yaml  map_2.pgm  map_2.yaml
mie443_contest2/src/: boxes.cpp  contest2.cpp  imagePipeline.cpp  navigation.cpp  nn.cpp  robot_pose.cpp  webcam_publisher.cpp
mie443_contest2/worlds/: world_1.world
mie443_contest2/worlds/models/: box_1.dae  box_2.dae  box_3.dae  box_4.dae
